--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/png" href="./img/CILKGax.png" />
-        <!-- 1. Tiêu đề của file index -->
-        <title>Happy birthday</title>
-        <link rel="stylesheet" href="./css/style.css" />
-    </head>
-    <body class="page__main">
-        <div class="buttons">
-            <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
-            <a href="index.html" class="btn btn-bir">Sinh nhật</a>
-            <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
-            <a href="gallery.html" class="btn btn-gallery">Ảnh kĩ niệm</a>
-        </div>
 
-        <!-- 2. Phần ảnh của người bạn mún chúc -->
-        <img src="./img/MyAvatar.jpg" alt="" class="cover" />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./img/CILKGax.png" />
+    <!-- 1. Tiêu đề của file index -->
+    <title>Happy birthday</title>
+    <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-        <!-- 3. Phần nhạc -->
-        <audio id="player" autoplay loop>
-            <source src="./music/music.mp3" type="audio/mp3" />
-        </audio>
-    </body>
+<body class="page__main">
+    <div class="buttons">
+        <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
+        <a href="index.html" class="btn btn-home">Home</a>
+        <a href="wish.html" class="btn btn-timeline">Lời chúc</a>
+        <a href="video.html" class="btn btn-bir">Clip vui</a>
+        <a href="gallery.html" class="btn btn-gallery">Ảnh kỉ niệm</a>
+    </div>
+
+    <!-- 2. Phần ảnh của người bạn mún chúc -->
+    <img src="./img/final.png" alt="" class="cover" width="50%" style="position: absolute; left: 65%; top: 5%;" />
+
+    <!-- 3. Phần nhạc -->
+    <audio id="player" autoplay loop>
+        <source src="./music/anh-yeu-em-cuc.mp3" type="audio/mp3" />
+    </audio>
+</body>
+
 </html>
