--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <!-- 6. Thay tất cả bằng hình ảnh của bạn -->
     <div class="gallery" id="gallery">
         <div class="gallery-item">
-            <div class="content"><img src="./img/final.png" alt="final.png" /></div>
+            <div class="content"><img src="https://static.cyhome.vn/final-1666212377420.png" alt="final.png" /></div>
         </div>
         <div class="gallery-item">
             <div class="content"><img src="./img/pic1.JPG" alt="1" /></div>
