--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./img/CILKGax.png" />
     <!-- Tiêu đề của trang ảnh kĩ niệm -->
-    <title>Ảnh kĩ niệm</title>
+    <title>Ảnh kỉ niệm</title>
     <link rel="stylesheet" href="./css/gallery.css" />
     <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -26,100 +26,100 @@
             <div class="content"><img src="https://static.cyhome.vn/final-1666212377420.png" alt="final.png" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic1.JPG" alt="1" /></div>
+            <div class="content"><img src="./img/pic1.jpg" alt="1" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic2.JPG" alt="2" /></div>
+            <div class="content"><img src="./img/pic2.jpg" alt="2" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic3.JPG" alt="3" /></div>
+            <div class="content"><img src="./img/pic3.jpg" alt="3" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic4.JPG" alt="4" /></div>
+            <div class="content"><img src="./img/pic4.jpg" alt="4" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic5.JPG" alt="5" /></div>
+            <div class="content"><img src="./img/pic5.jpg" alt="5" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic6.JPG" alt="6" /></div>
+            <div class="content"><img src="./img/pic6.jpg" alt="6" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic7.JPG" alt="7" /></div>
+            <div class="content"><img src="./img/pic7.jpg" alt="7" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic8.JPG" alt="8" /></div>
+            <div class="content"><img src="./img/pic8.jpg" alt="8" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic9.JPG" alt="9" /></div>
+            <div class="content"><img src="./img/pic9.jpg" alt="9" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic10.JPG" alt="10" /></div>
+            <div class="content"><img src="./img/pic10.jpg" alt="10" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic11.JPG" alt="11" /></div>
+            <div class="content"><img src="./img/pic11.jpg" alt="11" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic12.JPG" alt="12" /></div>
+            <div class="content"><img src="./img/pic12.jpg" alt="12" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic13.JPG" alt="13" /></div>
+            <div class="content"><img src="./img/pic13.jpg" alt="13" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic14.JPG" alt="14" /></div>
+            <div class="content"><img src="./img/pic14.jpg" alt="14" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic15.JPG" alt="15" /></div>
+            <div class="content"><img src="./img/pic15.jpg" alt="15" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic16.JPG" alt="16" /></div>
+            <div class="content"><img src="./img/pic16.jpg" alt="16" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic17.JPG" alt="17" /></div>
+            <div class="content"><img src="./img/pic17.jpg" alt="17" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic18.JPG" alt="18" /></div>
+            <div class="content"><img src="./img/pic18.jpg" alt="18" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic19.JPG" alt="19" /></div>
+            <div class="content"><img src="./img/pic19.jpg" alt="19" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic20.JPG" alt="22" /></div>
+            <div class="content"><img src="./img/pic20.jpg" alt="22" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic21.JPG" alt="21" /></div>
+            <div class="content"><img src="./img/pic21.jpg" alt="21" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic22.jpeg" alt="22" /></div>
+            <div class="content"><img src="./img/pic22.jpg" alt="22" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic23.JPG" alt="23" /></div>
+            <div class="content"><img src="./img/pic23.jpg" alt="23" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic24.JPG" alt="24" /></div>
+            <div class="content"><img src="./img/pic24.jpg" alt="24" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic25.JPG" alt="25" /></div>
+            <div class="content"><img src="./img/pic25.jpg" alt="25" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic26.JPG" alt="26" /></div>
+            <div class="content"><img src="./img/pic26.jpg" alt="26" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic27.JPG" alt="27" /></div>
+            <div class="content"><img src="./img/pic27.jpg" alt="27" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic28.jpeg" alt="28" /></div>
+            <div class="content"><img src="./img/pic28.jpg" alt="28" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic29.JPG" alt="29" /></div>
+            <div class="content"><img src="./img/pic29.jpg" alt="29" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic30.JPG" alt="30" /></div>
+            <div class="content"><img src="./img/pic30.jpg" alt="30" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic31.JPG" alt="31" /></div>
+            <div class="content"><img src="./img/pic31.jpg" alt="31" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic32.JPG" alt="32" /></div>
+            <div class="content"><img src="./img/pic32.jpg" alt="32" /></div>
         </div>
     </div>
     <!-- Phần nhạc -->
