--- a/wish.html
+++ b/wish.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="icon" type="image/png" href="./img/CILKGax.png">
   <!-- Tiêu đề của trang dòng thời gian -->
-  <title>Thời gian đã trải qua</title>
+  <title>Lời chúc</title>
   <link type="text/css" rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/style.css">
   <script type="text/javascript" src="./js/jquery.min.js"></script>
@@ -34,14 +34,19 @@
         <div id="code">
           <!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
           <font color="#3500ff">
-            <span class="say">Cảm ơn các chị em đồng nghiệp nữ đã đóng góp hết mình cho sự phát triển của công ty, là người vừa dịu dàng vừa đanh thép để công việc luôn được thực hiện trơn tru một cách tốt nhất.</span><br>
+            <span class="say">Cảm ơn các chị em đồng nghiệp nữ đã đóng góp hết mình cho sự phát triển của công ty, là
+              người vừa dịu dàng vừa đanh thép để công việc luôn được thực hiện trơn tru một cách tốt nhất.</span><br>
             <span class="say"> </span><br>
-            <span class="say">Thay mặt cho các đồng chí nam giới nhà CYFEER ❤, xin chúc mừng chị em nhân ngày Phụ nữ Việt Nam 20/10. Chúc cho chị em luôn trẻ đẹp, nhiều niềm vui, nhiều tiếng cười, nhận được nhiều hoa, nhiều quà và nhiều lời chúc tốt đẹp nhất từ bạn bè, người thân.
+            <span class="say">Thay mặt cho các đồng chí nam giới nhà CYFEER ❤, xin chúc mừng chị em nhân ngày Phụ nữ
+              Việt Nam 20/10. Chúc cho chị em luôn trẻ đẹp, nhiều niềm vui, nhiều tiếng cười, nhận được nhiều hoa, nhiều
+              quà và nhiều lời chúc tốt đẹp nhất từ bạn bè, người thân.
             </span><br>
             <span class="say"><span class="space"></span> -- CYFEER with love ❤ --</span>
           </font>
-          <img src="./img/final.png" alt="" class="cover" width="350px" height="350px" />
         </div>
+      </div>
+      <div id="clock-box">
+        <img src="./img/final.png" alt="" class="cover" width="350px" height="350px" />
       </div>
       <canvas id="canvas" width="1100" height="680"></canvas>
     </div>
