--- a/gallery.html
+++ b/gallery.html
@@ -16,110 +16,106 @@
     <div class="buttons">
         <a href="index.html" class="btn btn-home">Home</a>
         <a href="wish.html" class="btn btn-timeline">Lời chúc</a>
-        <a href="video.html" class="btn btn-bir">Clip vui</a>
         <a href="gallery.html" class="btn btn-gallery">Ảnh kỉ niệm</a>
     </div>
 
     <!-- 6. Thay tất cả bằng hình ảnh của bạn -->
     <div class="gallery" id="gallery">
         <div class="gallery-item">
-            <div class="content"><img src="https://static.cyhome.vn/final-1666212377420.png" alt="final.png" /></div>
+            <div class="content"><img src="./img/img26.jpeg" alt="26" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic26.jpg" alt="26" /></div>
+            <div class="content"><img src="./img/img27.jpeg" alt="27" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic27.jpg" alt="27" /></div>
+            <div class="content"><img src="./img/img28.jpeg" alt="28" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic28.jpg" alt="28" /></div>
+            <div class="content"><img src="./img/img29.jpeg" alt="29" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic29.jpg" alt="29" /></div>
+            <div class="content"><img src="./img/img30.jpeg" alt="30" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic30.jpg" alt="30" /></div>
+            <div class="content"><img src="./img/img31.jpeg" alt="31" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic31.jpg" alt="31" /></div>
+            <div class="content"><img src="./img/img32.jpeg" alt="32" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic32.jpg" alt="32" /></div>
+            <div class="content"><img src="./img/img1.jpeg" alt="1" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic1.jpg" alt="1" /></div>
+            <div class="content"><img src="./img/img2.jpeg" alt="2" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic2.jpg" alt="2" /></div>
+            <div class="content"><img src="./img/img3.jpeg" alt="3" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic3.jpg" alt="3" /></div>
+            <div class="content"><img src="./img/img4.jpeg" alt="4" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic4.jpg" alt="4" /></div>
+            <div class="content"><img src="./img/img5.jpeg" alt="5" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic5.jpg" alt="5" /></div>
+            <div class="content"><img src="./img/img6.jpeg" alt="6" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic6.jpg" alt="6" /></div>
+            <div class="content"><img src="./img/img7.jpeg" alt="7" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic7.jpg" alt="7" /></div>
+            <div class="content"><img src="./img/img8.jpeg" alt="8" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic8.jpg" alt="8" /></div>
+            <div class="content"><img src="./img/img9.jpeg" alt="9" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic9.jpg" alt="9" /></div>
+            <div class="content"><img src="./img/img10.jpeg" alt="10" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic10.jpg" alt="10" /></div>
+            <div class="content"><img src="./img/img11.jpeg" alt="11" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic11.jpg" alt="11" /></div>
+            <div class="content"><img src="./img/img12.jpeg" alt="12" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic12.jpg" alt="12" /></div>
+            <div class="content"><img src="./img/img13.jpeg" alt="13" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic13.jpg" alt="13" /></div>
+            <div class="content"><img src="./img/img14.jpeg" alt="14" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic14.jpg" alt="14" /></div>
+            <div class="content"><img src="./img/img15.jpeg" alt="15" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic15.jpg" alt="15" /></div>
+            <div class="content"><img src="./img/img16.jpeg" alt="16" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic16.jpg" alt="16" /></div>
+            <div class="content"><img src="./img/img17.jpeg" alt="17" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic17.jpg" alt="17" /></div>
+            <div class="content"><img src="./img/img18.jpeg" alt="18" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic18.jpg" alt="18" /></div>
+            <div class="content"><img src="./img/img19.jpeg" alt="19" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic19.jpg" alt="19" /></div>
+            <div class="content"><img src="./img/img20.jpeg" alt="22" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic20.jpg" alt="22" /></div>
+            <div class="content"><img src="./img/img21.jpeg" alt="21" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic21.jpg" alt="21" /></div>
+            <div class="content"><img src="./img/img22.jpeg" alt="22" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic22.jpg" alt="22" /></div>
+            <div class="content"><img src="./img/img23.jpeg" alt="23" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic23.jpg" alt="23" /></div>
+            <div class="content"><img src="./img/img24.jpeg" alt="24" /></div>
         </div>
         <div class="gallery-item">
-            <div class="content"><img src="./img/pic24.jpg" alt="24" /></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="./img/pic25.jpg" alt="25" /></div>
+            <div class="content"><img src="./img/img25.jpeg" alt="25" /></div>
         </div>
     </div>
     <!-- Phần nhạc -->
