--- a/wish.html
+++ b/wish.html
@@ -25,7 +25,6 @@
   <div class="buttons">
     <a href="index.html" class="btn btn-home">Home</a>
     <a href="wish.html" class="btn btn-timeline">Lời chúc</a>
-    <a href="video.html" class="btn btn-bir">Clip vui</a>
     <a href="gallery.html" class="btn btn-gallery">Ảnh kỉ niệm</a>
   </div>
   <div id="main">
@@ -34,19 +33,18 @@
         <div id="code">
           <!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
           <font color="#3500ff">
-            <span class="say">Cảm ơn các chị em đồng nghiệp nữ đã đóng góp hết mình cho sự phát triển của công ty, là
-              người vừa dịu dàng vừa đanh thép để công việc luôn được thực hiện trơn tru một cách tốt nhất.</span><br>
+            <span class="say">Em à, cảm ơn em đã đem nụ cười và làm bừng sáng lên cuộc đời anh.</span><br>
             <span class="say"> </span><br>
-            <span class="say">Thay mặt cho các đồng chí nam giới nhà CYFEER ❤, xin chúc mừng chị em nhân ngày Phụ nữ
-              Việt Nam 20/10. Chúc cho chị em luôn trẻ đẹp, nhiều niềm vui, nhiều tiếng cười, nhận được nhiều hoa, nhiều
-              quà và nhiều lời chúc tốt đẹp nhất từ bạn bè, người thân.
-            </span><br>
-            <span class="say"><span class="space"></span> -- CYFEER with love ❤ --</span>
+            <span class="say">Anh mong rằng những điều đẹp đẽ này sẽ không bao giờ vụt tắt.</span><br>
+            <span class="say"> </span><br>
+            <span class="say">Mừng ngày 20/10 đặc biệt của em, chúc em luôn xinh đẹp, vui vẻ và hạnh phúc bên anh
+              nhé.</span><br>
+            <span class="say"><span class="space"></span> -- Yêu em with love ❤ --</span>
           </font>
         </div>
       </div>
       <div id="clock-box">
-        <img src="./img/final.png" alt="" class="cover" width="350px" height="350px" />
+        <img src="./img/final.jpeg" style="border-radius: 50%;" class="" width="350px" height="350px" />
       </div>
       <canvas id="canvas" width="1100" height="680"></canvas>
     </div>
@@ -55,7 +53,7 @@
 
   <!-- Phần nhạc -->
   <audio id="player" autoplay loop>
-    <source src="./music/music.mp3" type="audio/mp3" />
+    <source src="./music/anh-yeu-em-cuc.mp3" type="audio/mp3" />
   </audio>
   <script>
     (function () {
