--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
         <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
         <a href="index.html" class="btn btn-home">Home</a>
         <a href="wish.html" class="btn btn-timeline">Lời chúc</a>
-        <a href="video.html" class="btn btn-bir">Clip vui</a>
         <a href="gallery.html" class="btn btn-gallery">Ảnh kỉ niệm</a>
     </div>
 
     <!-- 2. Phần ảnh của người bạn mún chúc -->
-    <img src="./img/final.png" alt="" class="cover" width="50%" style="position: absolute; left: 65%; top: 5%;" />
+    <!-- <img src="./img/final.png" alt="" class="cover" width="50%" style="position: absolute; left: 65%; top: 5%;" /> -->
 
     <!-- 3. Phần nhạc -->
     <audio id="player" autoplay loop>
-        <source src="./music/anh-yeu-em-cuc.mp3" type="audio/mp3" />
+        <source src="./music/music.mp3" type="audio/mp3" />
     </audio>
 </body>
 
